<resources>
    <string name="app_name">久速商城</string>
    <string name="exit_str">再按一次返回键退出久速商城！</string>
    <string name="loading">加载中，请稍后</string>

    <plurals name="error_over_count">
        <item quantity="one">最多选择一个文件</item>
        <item quantity="many">最多只能选择 %1$d 个文件</item>
    </plurals>
    <!--FlowLayout-->

    <!--权限-->
    <string name="permission_message">存储、电话、定位权限为必选项，全部开通才可以正常使用APP</string>
    <string name="permission_button_application">申请</string>

    <!--zxing-->
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="scan_code">扫一扫</string>
    <string name="open_flash">打开闪光灯</string>
    <string name="close_flash">关闭闪光灯</string>
    <string name="gallery">相册</string>
    <string name="scan_failed_tip">图片解析失败，换个图片试试.</string>


    <string name="feed_back_toast">为了更好的反馈您的问题，您可以上传图片，图片3张，最大不超过5M（选填）</string>

    <string name="bind_alipay">1．请填写支付宝中绑定银行卡填写的真实姓名。\n2．为了保证顺利收款，不要特意更改其他账号，否则会导致收款不到账
\n3．我们承诺不会向任何人透露您的个人隐私信息</string>

    <string name="bind_owner">1．请填写车主真实姓名以保证开通更多会员福利 \n2．为了保证会员车主能顺利的享受保险福利，请填写与车主真实姓名 \n3．我们承诺不会向任何人透露您的个人信息</string>

    <string name="bind_wechat">1．请填写微信中绑定银行卡填写的真实姓名。\n2．为了保证顺利收款，不要特意更改其他账号，否则会导致收款不到账\n3．我们承诺不会向任何人透露您的个人隐私信息</string>

    <string name="withdraw_deposit_alipay_warm_prompt">1．用户实名认证后，才可以进行提现操作。
        \n2．您可以通过提现记录查看明细。
        <!--        \n3．提现金额最低为516元。-->
        <!--        \n4．单月提现金额小于800元免个税,小于4000元个税税费为-800x0.2，大与4000元个税税率为16%,大与两万元个税税费为x30%-2000元。-->
        <!--        \n5．请在支付宝发票管家中开具电子发票后上传。-->
        \n3．实际到账金额为扣除税费后的金额。</string>


    <string name="refund_confirm_receipt">1.如果拒绝退款，买家可以申请客服介入处理\n2.如果您逾期未处理，将自动退款给买家</string>

    <string name="shop_sure_buy_toast">温馨提示： \n\n 1.只有您的积分足够抵扣折扣金额时才可打折，否则将原价付款（积分与金额1:1） \n\n 2.最低使用1积分  \n\n3.可在 我的—消费记录 中查看您的所有店内买单记录</string>


    <!-- 身份证识别-->
    <string name="crop_fail">裁剪失败</string>
    <string name="touch_to_focus">触摸屏幕对焦</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!-- ===================================== 给买家看的-->

    <!-- 买家申请退款-->
    <string name="refund_buyer_money_application">请等待卖家处理</string>
    <string name="refund_buyer_money_application_toast">您已发起退款申请，请耐心等待卖家处理</string>
    <string name="refund_buyer_money_application_toast_all">1.买家同意或者超时未处理，系统将退款给您\n2.如果买家拒绝，您可以修改申请后再次发起，卖家会重新处理</string>

    <!--买家申请退货-->
    <string name="refund_buyer_cargo_application">请等待卖家处理</string>
    <string name="refund_buyer_cargo_application_toast">请等待卖家处理</string>
    <string name="refund_buyer_cargo_application_toast_all">1.卖家同意后，请按照给出的地址退货，并请记录退运货单号\n2.如卖家拒绝，您可以修改申请后再次发起，卖家会重新处理\n3.如卖家超时未处理，退货申请将达成，请按系统给出的退货地址退货</string>

    <!--卖家拒绝退货和退款 -->
    <string name="refund_buyer_refuse_return">卖家已拒绝，您需要及时响应</string>
    <string name="refund_buyer_refuse_return_toast_all">1.您可以修改申请后再次发起，卖家会重新处理\n2.如果您逾期未处理，本次申请将自动关闭</string>

    <!--卖家同意退货-->
    <string name="refund_buyer_cargo_return">请退货并填写物流信息</string>
    <string name="refund_buyer_cargo_return_toast">卖家已同意退货申请，请尽早退货</string>
    <string name="refund_buyer_cargo_return_toast_all">1.未与卖家协商一致，请勿使用平邮或到付，以免卖家拒签货物\n2.交易的欠款还在中间账户中，确保您资金安全\n3.请填写真是物流信息，逾期未填写，退货申请将撤销</string>

    <!--等待卖家收货-->
    <string name="refund_buyer_wait_seller_rceiving">请等待卖家收货并退款</string>
    <string name="refund_buyer_wait_seller_rceiving_toast">如果卖家收到货并验货无误，将操作退款给您</string>
    <string name="refund_buyer_wait_seller_rceiving_toast_all">如果卖家拒绝退款，需要您修改退货申请</string>

    <!--买家关闭退款申请-->
    <string name="refund_buyer_close_money_application">退款关闭</string>
    <string name="refund_buyer_close_money_application_toast">您已撤销本次退款申请，如问题仍未解决，您可以重新发起申请</string>

    <!-- ===================================== 给卖家看的-->

    <!-- 卖家退款审核-->
    <string name="refund_seller_audit">请处理退款申请</string>
    <string name="refund_seller_audit_toast">请及时联系买家协商退款事宜</string>
    <string name="refund_seller_audit_toast_all">1.如未发货，请点击同意退款给买家\n2.如实际已发货，请主动与买家联系，确认后去订单上操作发货\n3.逾期未响应，系统将自动退款给买家</string>
    <string name="refund_seller_audit_toast_all_two">1.如未发货，请点击同意退款给买家\n2.如果您拒绝，买家可以申请客服介入处理\n3.逾期未响应，系统将自动退款给买家</string>
    <!--卖家退货审核-->
    <string name="refund_seller_cargo_application">请处理退货申请</string>
    <string name="refund_seller_cargo_application_toast">请及时联系买家协商退货事宜</string>
    <string name="refund_seller_cargo_application_toast_all">1.如果您同意，请点击“同意退货”，将正确退货地址给买家\n2.如果您拒绝，买家可以申请客服介入处理\n3.如果您逾期未处理，系统会自动将当前地址发给买家</string>
    <!--卖家同意退货-->
    <string name="refund_seller_agree_cargo_return">如因您提供的退货地址错误，导致买家无法退货或退回商品后无法送达，由您承担因此产生的后果</string>
    <!-- 卖家拒绝退货和退款 -->
    <string name="refund_seller_refuse_return">请等待买家响应</string>
    <string name="refund_seller__refuse_return_toast">买家修改退款申请后，需要您重新处理\n如果买家超时未响应，退款申请将自动关闭</string>
    <!-- 卖家确认收货-->
    <string name="refund_seller_confirm_receipt">请确认收货</string>
    <string name="refund_seller_confirm_receipt_toast">买家已退货，收到买家退货时，请验货后同意退款</string>

    <!-- 等待买家退货-->
    <string name="refund_seller_wait_receipt">请等待卖家退货</string>
    <string name="refund_seller_wait_receipt_toast">买家已退货，收到买家退货时，请验货后同意退款\n如果买家在超时结束前未退货，退货申请将自动关闭</string>

</resources>
