<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_mine_focus_ll"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="11dp"
        android:layout_marginTop="5dp"
        android:paddingRight="11dp">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="13dp"
            android:text="取消"
            android:textColor="#666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="#999999"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="13dp"
            android:text="确定"
            android:textColor="@color/text_green_9ace32"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#F7F7F7" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <com.jjz.energy.widgets.datepicker.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible"
                android:text="@string/year"
                android:textColor="#333333"
                android:textSize="18sp" />

            <com.jjz.energy.widgets.datepicker.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="#333333"
                android:textSize="18sp" />

            <com.jjz.energy.widgets.datepicker.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:visibility="invisible"
                android:textColor="#333333"
                android:textSize="18sp" />

            <com.jjz.energy.widgets.datepicker.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:visibility="invisible"
                android:textColor="#333333"
                android:textSize="18sp" />

            <com.jjz.energy.widgets.datepicker.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="#333333"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>